# SysForge

./: .gitignore  README.md  pyproject.toml  requirements.txt
Schema/: README.md  index.schema.json  project.schema.json  task.schema.json  user.schema.json
sysforge/: __init__.py  __main__.py  _import_shims.py  common.py  logging_utils.py  reporting.py  shared_config.py  sysforge_core5_docs.md  sysforge_paths.py
sysforge/briefing/: README.md  __init__.py  briefing.py  briefing_core5_docs.md
sysforge/briefing/data/: briefing_config.json  calendar.json  quotes.json  weather.json
sysforge/config/: README.md  config.py  config_core5_docs.md
sysforge/config/templates/: web-app.json
sysforge/data/: default_organizer_rules.json  sysforge.json  sysforge.schema.json
sysforge/mdhtml/: README.md  __init__.py  markdown.py  mdhtml_core5_docs.md  template.html
sysforge/mdhtml/themes/: dark.css  light.css
sysforge/monitor/: README.md  __init__.py  monitor.py  monitor_docs.md
sysforge/organizer/: README.md  organizer.py  organizer_docs.md
sysforge/timetracker/: README.md  __init__.py  timetracker.py  timetracker_core5_docs.md
tests/: conftest.py  test_briefing.py  test_common.py  test_config_validate.py  test_markdown_shim.py  test_mdhtml.py  test_monitor.py  test_organizer.py  test_reporting.py  test_shared_config.py  test_timetracker.py
