[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sysforge"
version = "0.2.0"
description = "A developer operations toolkit: file organization, docs, briefings, time tracking, config, and health monitoring."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["cli", "markdown", "monitoring", "productivity", "sysforge"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "markdown>=3.6",
  "pygments>=2.18",
  "psutil>=5.9",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-Markdown>=3.7",
  "types-psutil>=6.0",
]

[project.scripts]
sysforge = "sysforge.__main__:main"
sysforge-organizer = "sysforge.organizer.organizer:main"
sysforge-mdhtml = "sysforge.mdhtml.markdown:main"
sysforge-briefing = "sysforge.briefing.briefing:main"
sysforge-time = "sysforge.timetracker.timetracker:main"
sysforge-config = "sysforge.config.config:main"
sysforge-health = "sysforge.monitor.monitor:main"

[tool.setuptools]
include-package-data = true
packages = [
  "sysforge",
  "sysforge.organizer",
  "sysforge.briefing",
  "sysforge.config",
  "sysforge.mdhtml",
  "sysforge.monitor",
  "sysforge.timetracker",
]

[tool.setuptools.package-data]
sysforge = [
  "py.typed",
  "data/*.json",
  "mdhtml/*.html",
  "mdhtml/themes/*.css",
  "briefing/data/*.json",
  "config/templates/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=sysforge --cov-report=term-missing --cov-fail-under=63"

[tool.coverage.run]
source = ["sysforge"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", ".eggs", "build", "dist", "sysforge.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "B008",  # Typer CLI: Option()/Argument() in parameter defaults
  "B904",  # raise typer.Exit from except: explicit chaining rarely helps CLI code
  "SIM108",  # if/else clarity over ternary in dense logic
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
exclude = "(^build/|^\\.eggs/|sysforge\\.egg-info/)"
packages = ["sysforge", "tests"]

# Third-party: pygments has no official stubs; ignore only that subtree.
[[tool.mypy.overrides]]
module = ["pygments.*"]
ignore_missing_imports = true
